syntax = "proto3";

option java_package = "com.grpc";
option java_multiple_files = true;

package game;

// Сервис для игровых действий
service GameService {
  // Теперь запрос пустой, так как playerId сервер возьмет из JWT
  rpc JoinSession (JoinRequest) returns (JoinResponse);

  rpc GetMapLayout (MapRequest) returns (MapLayout);
}

// В будущем сюда можно добавить, например, имя комнаты или регион
message JoinRequest {}

message JoinResponse {
  string sessionId = 1;
  string status = 2;
}

message MapRequest {
  string sessionId = 1;
}

message MapLayout {
  repeated SubLocation rooms = 1;
  int32 timerSeconds = 2;
}

message SubLocation {
  string id = 1;
  float x = 2;
  float y = 3;
  float width = 4;
  float height = 5;
}

// Сервис авторизации (точка входа)
service AuthService {
  // Обмен внешнего токена Google на внутренний токен игры
  rpc AuthenticateWithGoogle (GoogleAuthRequest) returns (AuthResponse);
}

message GoogleAuthRequest {
  string id_token = 1;
}

message AuthResponse {
  string access_token = 1;
  string player_id = 2;
  int64 expires_at = 3;
}