#include <iostream>
#include <string>
#include <grpcpp/grpcpp.h>
#include "game.grpc.pb.h" // –¢–≤–æ–π —Å–≥–µ–Ω–µ—Ä–∏—Ä–æ–≤–∞–Ω–Ω—ã–π –∑–∞–≥–æ–ª–æ–≤–æ–∫

using grpc::Server;
using grpc::ServerBuilder;
using grpc::ServerContext;
using grpc::Status;
using game::DedicatedService;
using game::PingRequest;
using game::PingResponse;

class DedicatedServiceImpl final : public DedicatedService::Service {
    Status Ping(ServerContext *context, const PingRequest *request, PingResponse *response) override {
        std::cout << "üéÆ Received Ping from client!" << std::endl;
        response->set_server_time(123456789); // –ü—Ä–æ—Å—Ç–æ –∑–∞–≥–ª—É—à–∫–∞
        return Status::OK;
    }
};

void RunServer() {
    std::string server_address("0.0.0.0:9000"); // –ü–æ—Ä—Ç –≤–Ω—É—Ç—Ä–∏ –∫–æ–Ω—Ç–µ–π–Ω–µ—Ä–∞ –≤—Å–µ–≥–¥–∞ 9000
    DedicatedServiceImpl service;

    ServerBuilder builder;
    builder.AddListeningPort(server_address, grpc::InsecureServerCredentials());
    builder.RegisterService(&service);

    std::unique_ptr<Server> server(builder.BuildAndStart());
    std::cout << "üöÄ Dedicated Server listening on " << server_address << std::endl;
    server->Wait();
}

int main() {
    RunServer();
    return 0;
}
